--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -597,7 +597,7 @@
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li>C·platform</li><li><strong>NEWS</strong></li><li><strong>MISSION</strong></li><li><a class="text-white" href="#">R</a>OADMAP</li><li>PARTNERS</li><li>TEAM</li></ul>
+                <ul><li>C·platform</li><li>NEWS</li><li>MISSION</li><li><a class="text-white" href="#">R</a>OADMAP</li><li>PARTNERS</li><li>TEAM</li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +1 (0) 000 0000 001<br><br><br><strong>Partners</strong><br>06042<br>(서울시 강남구 학동로19길 35,1층(논현동28-11<br><br></p>
@@ -610,7 +610,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="L3nZ4Ru29F4p2iKk2RGYxdAOl4J2GIKRtb8ylfibD+/ITxq49czbP4NzbLvpiHakYOzShC71vLMbXFDCmzqRaiu0Bf6U3RvendeHAZRjKV11DpGCyLGOVm2+4jfQTDec" data-form-email="true">
+                    <input type="hidden" value="ows+buovkQhSaOlVFjgvjsn67FSpuusbhvSzPAM8cPrqIDNoqmJsoP9pi2nknVjh8IJW9HLkGGodL6/EfYQOx3V0FSKXQGrL0RFUOyYZ2WBCEle2yHFPVm1h2gbCIgMQ" data-form-email="true">
 
                     
 
