--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="203">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="203">
     <div>
         <div>
             <div>
@@ -586,7 +586,7 @@
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li><a href="index.html">C·platform</a></li><li><a href="index.html">NEWS</a></li><li><a href="index.html">MISSION</a></li><li><a class="text-white" href="index.html">ROADMAP</a></li><li><a href="index.html">PARTNERS</a></li><li><a href="index.html">TEAM</a></li></ul>
+                <ul><li><a href="index.html">C·platform</a></li><li><a href="index.html">NEWS</a></li><li><a href="index.html">MISSION</a></li><li><a href="index.html">ROADMAP</a></li><li><a href="index.html">PARTNERS</a></li><li><a href="index.html">TEAM</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +1 (0) 000 0000 001<br><br><br><strong>Partners</strong><br>06042<br>(서울시 강남구 학동로19길 35,1층(논현동28-11<br><br></p>
@@ -599,7 +599,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="OZ8gnbA4XWZTmVw4vPZmXCj5PaMtNTomY7ev3wO2W7xMrZUgELm930yBrdONyHnKXe5Z4C40iZpehV71t7QLPVD+oMjiWaTPIa1nieHMHKhXaEn5Sw3pb1RXpzvnQuQI" data-form-email="true">
+                    <input type="hidden" value="t2S6EE1ZEnPxmc0eIVGaPp+6cR6ILDhEKW/8gdqn1/jB5ebI6l7J+q8imCcDPi90ahQrbDlxDm4cIEOHDsXuj+B7TdDwK5QRs2UE6Oo0R0QmXGjRuLgYVyDA6sEhZMvX" data-form-email="true">
 
                     
 
