--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -137,7 +137,7 @@
                                 <div class="row">
                                     <div class="col-md-8 col-md-offset-2 text-xs-center">
                                         <h2 class="mbr-section-title display-1">Christian Culture Platform</h2>
-                                        <p class="mbr-section-lead lead">크리스천 문화플랫폼</p>
+                                        <p class="mbr-section-lead lead">크리스천 플랫폼 문화에 담다</p>
 
                                         
                                     </div>
@@ -614,7 +614,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="tbRtlxDer5VRP5Vl1RpwYE9SJ4uM3+/q6sOo5A/e4DKCk6DzSbBOUKnRsX6LBViyh8XRCY8gGflLUQ0JoJh90BuBmiXs4+XYTLsHb1sgDxwxW48kaya4MVSvJ3cmSJWU" data-form-email="true">
+                    <input type="hidden" value="FJixP1BckC3Jwr1McO55Nm2O9R4XnDtgJsLGzIlsf5s7ogcWj794Hrqu+hmrbxAjZlQiuEomQ07RQvJtdgK00AlvPti4PERq/y7qtdcfjDI3VBswOmLiLwPgLDhxeXU8" data-form-email="true">
 
                     
 
