--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -262,7 +262,7 @@
                     <div class="card-block">
                         <h4 class="card-title">CㆍPAY</h4>
                         
-                        <p class="card-text">X<br><br>기독교 뮤직폰 연동<br>교회카페 주문<br>한국기독교 순례길</p>
+                        <p class="card-text">X<br><br>기독교 뮤직폰 연동<br>교회카페 주문<br>한국기독교 순례길 역사탐방</p>
                         <div class="card-btn"><a href="index.html" class="btn btn-primary">&lt;더 알아보기</a></div>
                     </div>
                 </div>
@@ -614,7 +614,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="P3aT5zpuewD9rI3bF5LlYCiqN68p4iAqYprAybeNBB4BtLPZV6KZf2SrjkjLtfA8Notcv0MgaYQcuDXZPZArTs2BgIMdQ5oDum0tZZBe1rVNIZ1ApDLVb3jL/6BlmGd/" data-form-email="true">
+                    <input type="hidden" value="s3ZMCO3uoRx5YxJiK4Saa72XxaftS26ji5C4re5NMvAhhI0oJPjUkmnb3LXWlt7RqXEU9bbHuF8e4poOjonE93FU2KZggVKXgPr5O9Z8TaPuxJtfbCaMRTwsQW27yM32" data-form-email="true">
 
                     
 
