--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="247">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="247">
     <div>
         <div>
             <div>
@@ -237,7 +237,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box5-1c" data-rv-view="283" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section" id="msg-box5-1c" data-rv-view="283" style="background-color: rgb(244, 134, 31); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -648,7 +648,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="uNX5U6Ex5auooGvOoQmVpe/77RvkOCZrcX9nHkDkUKO9yMhys855CwDl29Wle0PoknsHPgxUZBlQbSwKzWCdKPzZ1Dn9lLT/Xjs9HCCs6SYqfUPwsu23ccqxviaWYosd" data-form-email="true">
+                    <input type="hidden" value="xJ+9C6g7aYanSRp/aKayHrmPmQxnIpnnR5wc7n79HFRiVadxbRHjdPOtADZYAjIMpUIukjdYn4PsZKF+EmHkkUg5jOfEsmHqrEMfSJkmzgpKaKvbEPct5y6fZbDHzNJ5" data-form-email="true">
 
                     
 
