--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="247">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="247">
     <div>
         <div>
             <div>
@@ -252,7 +252,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2">크리스천<br>플랫폼</h3>
+                  <h3 class="mbr-section-title display-2">크리스천 플랫폼</h3>
                   <div class="lead">
 
                     <p>.C·Platform은 크리스천 공유경제 실현, 투명한 기부문화 확산, 건강한 가치증식을 추구하는 크리스천 플랫폼입니다</p>
@@ -648,7 +648,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="gDCv5YybX54MiLGsAAsZS1jZRGIYdyqzIpgUwkP27cM7vpZYPXMOB8v0X8dQFCtl0yMGx4sbzpZIhAgw+NXJXSyySNzbYGGbodfXHDeZWfWwhWCXU9YuuLA/iNcE75fS" data-form-email="true">
+                    <input type="hidden" value="usktlEzbr1MNzR+5SXGfvvZ7G04VixJZu746G/dxma//eyT120kRCTU/9Cwjx1dIKz3tkSLGRvXyBS/oLvGe8bkFsz1wTJ8htjxcpedqZ82n4IlxrrpMkcreHsZNW2SQ" data-form-email="true">
 
                     
 
