--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="447">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="447">
     <div>
         <div>
             <div>
@@ -271,7 +271,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="buttons1-x" data-rv-view="483" style="background-color: rgb(35, 35, 35); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container" id="buttons1-x" data-rv-view="483" style="background-color: rgb(0, 0, 0); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -648,7 +648,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="X1qJd3tSDz5zKUxPYphinjlwoGZ3iMRgUmtuCmCL6A+YKctz5z76rQWrbNKG5KC8MdNibDc4zHC4hqmrp8cPTzwgY43k5UKpi8UJjqJD/81WNIQQuQg8EOjSPU4+cP6L" data-form-email="true">
+                    <input type="hidden" value="VAcc0vcpKoBVZt5zt1W0L5KYNbjtf3E1GgxfZo8d9fTsCdzBMLSpkMaSdQO/TKvtBsORzOUAoKZMEyUBPm0MDdWmgdRTGVN9rP30OSMBuKMooeAax81o0BGin/VTfQos" data-form-email="true">
 
                     
 
