--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="447">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="447">
     <div>
         <div>
             <div>
@@ -216,16 +216,6 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-u" data-rv-view="476" style="background-color: rgb(244, 134, 31); padding-top: 20px; padding-bottom: 20px;">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 lead"><p>.C·Platform은 크리스천 공유경제 실현, 투명한 기부문화 확산, 건강한 가치증식을 추구하는 크리스천 플랫폼입니다</p></div>
-        </div>
-    </div>
-
-</section>
-
 <section class="mbr-section mbr-section__container article" id="header3-16" data-rv-view="478" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
@@ -308,7 +298,7 @@
                     <div class="card-block">
                         <h4 class="card-title">CㆍPAY</h4>
                         
-                        <p class="card-text">X<br><br>기독교 뮤직폰 연동<br>교회카페 주문<br>한국기독교 순례길 역사탐방</p>
+                        <p class="card-text">X<br><br>기독교 뮤직폰<br>교회 결제시스템<br>한국기독교 순례길 역사탐방<br>교회문화사역</p>
                         <div class="card-btn"><a href="#top" class="btn btn-primary">&lt;더 알아보기</a></div>
                     </div>
                 </div>
@@ -648,7 +638,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="VAcc0vcpKoBVZt5zt1W0L5KYNbjtf3E1GgxfZo8d9fTsCdzBMLSpkMaSdQO/TKvtBsORzOUAoKZMEyUBPm0MDdWmgdRTGVN9rP30OSMBuKMooeAax81o0BGin/VTfQos" data-form-email="true">
+                    <input type="hidden" value="Glz/mmeZjI5UPSql4THoiMRsgZtwINISx49j10BxoCZgYrGH1v1A8OdVcfmAM0t1GDbAj60XCRVhytNAdZKMlXM0CyoIxk8HJVnpP8sf27ahW5+Ga7q3oX4cNcEj/Pam" data-form-email="true">
 
                     
 
