--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 </div>
                 <div class="mbr-table-cell">
 
-                    <button class="navbar-toggler pull-xs-right" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                    <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://www.cplatform.io" data-toggle="dropdown-submenu" aria-expanded="true">C·Platform</a><div class="dropdown-menu"><a class="dropdown-item" href="#top">비전</a><a class="dropdown-item" href="index.html" aria-expanded="false">C 문화</a><a class="dropdown-item" href="#top" aria-expanded="false">걸어온 길</a><a class="dropdown-item" href="#top" aria-expanded="false">CI</a></div></li><li class="nav-item"><a class="nav-link link" href="https://www.cplatform.io">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">MISSION</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">ROADMAP</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PARTNERS</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="#top">백서 DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://www.cplatform.io" data-toggle="dropdown-submenu" aria-expanded="true">C·Platform</a><div class="dropdown-menu"><a class="dropdown-item" href="#top">비전</a><a class="dropdown-item" href="index.html" aria-expanded="false">C 문화</a><a class="dropdown-item" href="#top" aria-expanded="false">걸어온 길</a><a class="dropdown-item" href="#top" aria-expanded="false">CI</a></div></li><li class="nav-item"><a class="nav-link link" href="https://www.cplatform.io">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">MISSION</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">ROADMAP</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PARTNERS</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="#top">백서 DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="523">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="523">
     <div>
         <div>
             <div>
@@ -638,7 +638,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="QmNSgiiMEhwjOk5mhKHFWrmMURLdzKkJTCBUE78uSadnTH3OeSQuaxJyrZSdikzuD4sT8nbkY7YQjLIqEL/fG/To6pCIobcuq2bzCGzKj0JZZ3Mv+haVl7PI7Min6Y02" data-form-email="true">
+                    <input type="hidden" value="dnX3RZWrhy0R4EdmJrlU3GrLUSaJV4v8ks7yEWjtDG0K90r1UmgWdG6wah/nt9cfR52dGbEY1Y/n9VpjMFITKET0lP3FdPuHxcWSi99yuwf1yUjQKp5pORrrNV+8LWPO" data-form-email="true">
 
                     
 
