--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -633,7 +633,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="https://mobirise.com/mobirise-free-win.zip">DOWNLOAD FOR WIN</a> </div>
+                <div class="text-xs-center"><coingecko-coin-price-marquee-widget  coin-ids="bitcoin,ethereum,eos,ripple,litecoin" currency="krw" background-color="#ffffff" locale="ko"></coingecko-coin-price-marquee-widget></div>
             </div>
         </div>
     </div>
@@ -684,7 +684,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="dOteac7a6ULbG0d8Qiw5CC48/bFsmZjJExxFlr3Nh69bdaoel0NuEY+9A9JajLG6N5sNytUQCzOFrJYh3JvLb/UWMlff4fVpy4zTGpWmbvgwNLuNRgQZXjGvH8o+l0Bk" data-form-email="true">
+                    <input type="hidden" value="S1Ndkj2lHcloWbHBxNP3soZSR8+FYvSA3OdOD/A9Oosr7Bu2WRjZp94nk8ybA+CQwDnB7CpjJHyWBn5t3Z4wlY/wEWGqSozRSGT+yC6g8TDM1biPCYfScWt1Ncmtwb0F" data-form-email="true">
 
                     
 
@@ -733,7 +733,7 @@
   <script src="assets/mobirise-gallery/script.js"></script>
   <script src="assets/mobirise-slider-video/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  
+  <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
   
   <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
