--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -259,6 +259,17 @@
         </div>
     </div>
 
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-20" data-rv-view="188" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">MISSION</h3>
+                
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="mbr-cards mbr-section mbr-section-nopadding" id="features6-n" data-rv-view="38" style="background-color: rgb(255, 255, 255);">
@@ -765,7 +776,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="RwKQfpGGXxvClOAC2pna6/9bYjnHg4DOZqKM2IlxwNWTWsQFnhAnxTNcLmWDjv53GvnutitVjtnzesPxdWQJkGwjfiNuqmcpxrGsYrpRDEM8p9BtxcLmR7P/Q5NU8vsk" data-form-email="true">
+                    <input type="hidden" value="7BEMC8Uk3i5iyyUuwZYAVkUatk6Y0l8pHH9K6NTAu1ak7vnJjCzJ+kKpXgSm0YnCN9mcUq/mhZE2kuQAgCHW7/aaBtvm7hxbrgopv96oVlQveRWlIrsTJYffybvPQUMa" data-form-email="true">
 
                     
 
