create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="false" id="slider-1" data-rv-view="2">
     <div>
         <div>
             <div>
@@ -224,7 +224,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 59%;">
-                  <div class="mbr-figure"><img src="assets/images/iphone-x-free-mock-up-1200x900.png"></div>
+                  <div class="mbr-figure"><img src="assets/images/iphone-x-free-mock-up-1-1200x900.png"></div>
               </div>
 
               
@@ -765,7 +765,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="CqcQ7sF/twyHOjzpqRjjju0I/DSiuFw/dBaRAObDZh97U7staaX34OyIe3pRzYgTfOYHmI41wKl2OnyDFuXi6zxYxpe43M8IUkq+jsCosqL8nUYOVZYohwNF11+qKTlf" data-form-email="true">
+                    <input type="hidden" value="El1Nf6FIN2R1xFEzk4FMww/1CQ7q9lv74/LyBtlMe9UETEzI1BLARsd2nHcaQPbXkdkzM2T1F5HXo3iXoJR/a0jPVwsqGI/pgrh8VlkkAqxuWRD2Khuso9PbAz/kMr4P" data-form-email="true">
 
                     
 
@@ -816,7 +816,7 @@
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
