create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg); padding-top: 200px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -79,7 +79,7 @@
                   <h3 class="mbr-section-title display-2">크리스천 플랫폼</h3>
                   <div class="lead">
 
-                    <p>C·Platform은 크리스천 공유경제 실현, 투명한 기부문화 확산, 건강한 가치증식을 추.구하는 크리스천 플랫폼입니다.</p>
+                    <p>C·Platform은 크리스천 공유경제 실현, <br>투명한 기부문화 확산, 건강한 가치증식을 추구하는 <br>크리스천 플랫폼입니다.</p>
 
                   </div>
 
@@ -343,7 +343,7 @@
                             <h3 class="mbr-section-title display-2">C·Platform</h3>
 
                             <div class="mbr-section-text">
-                                <p>.C·Platform은 크리스천 공유경제 실현<br>투명한 기부문화 확산, 건강한 가치증식을<br>.추구하는 크리스천 플랫폼입니다</p>
+                                <p>C·Platform은 크리스천 공유경제 실현<br>투명한 기부문화 확산, 건강한 가치증식을<br>추구하는 크리스천 플랫폼입니다.</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-warning" href="index.html">&lt;더 알아보기</a></div>
@@ -744,7 +744,7 @@
                         </li>
                         <li class="list-group-item active">
                             <span class="list-group-icon"><span class="etl-icon icon-envelope mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text"><a href="mailto:support@mobirise.com" class="text-primary">support@cplatform.io</a></span>
+                            <span class="list-group-text"><a href="mailto:support@mobirise.com" class="text-warning">support@cplatform.io</a></span>
                         </li>
                     </ul>
                 </div>
@@ -755,7 +755,7 @@
                 <ul><li><a href="index.html" class="text-warning">C·platform</a></li><li><a href="index.html" class="text-warning">NEWS</a></li><li><a href="index.html" class="text-warning">MISSION</a></li><li><a href="index.html" class="text-warning">ROADMAP</a></li><li><a href="index.html" class="text-warning">PARTNERS</a></li><li><a href="index.html">TEAM</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
-                <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +82 10 5177 2299<br><br><br><strong>Partners</strong><br>06042<br>(서울시 강남구 학동로19길 35,1층(논현동28-11)<br><br></p>
+                <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +82 10 5177 2299<br><br><br><strong>Partners</strong><br>06042<br>서울시 강남구 학동로19길 35,1층(논현동28-11)<br><br></p>
             </div>
             <div class="col-xs-12 col-md-6 col-lg-3" data-form-type="formoid">
 
@@ -765,7 +765,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="qfhG+6wK07B+JwF/FiAy01ef/584F85eu+BkNNo9TjMN1N8OoNIq36XUqkRb6PLBDPiXSURhdxvWz0hUwqxgb5LWx3Xdu8MZpjUBGBTA8IplIC8nxQMaTXVAxp3wmeVd" data-form-email="true">
+                    <input type="hidden" value="jgOrLYUSDoC0CVyPvhuUjhC9KMSCa+tV7CtAxekKtE/lqcZUybpX30oz30FgeCAbo25+zCQgiOF8O3AfY2mLrsMLRyWwP9GbQ+Hmt5O9K+gdts/QvsdJiTJAqIZOObaN" data-form-email="true">
 
                     
 
