create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 200px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box5-1c" data-rv-view="0" style="background-image: url(assets/images/iphone-xs-isometric-onfloor-mockup-2-1920x1560.png); padding-top: 200px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -567,16 +567,16 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <ol class="carousel-indicators">
-                        <li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" class=" active" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="4"></li>
+                        <li data-app-prevent-settings="" data-target="#lb-gallery4-t" class=" active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#lb-gallery4-t" data-slide-to="4"></li>
                     </ol>
                     <div class="carousel-inner">
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <img src="assets/images/cplatform-photo-917x479.png" alt="" title="">
                         </div><div class="carousel-item">
                             <img src="assets/images/diana-vargas-715578-unsplash-2000x1500.jpg" alt="" title="">
                         </div><div class="carousel-item">
                             <img src="assets/images/wirtschaft-der-freiheit-website-header-1-1301x671.jpg" alt="" title="">
-                        </div><div class="carousel-item active">
+                        </div><div class="carousel-item">
                             <img src="assets/images/-ebook.pdf-page-3-2000x1419.jpg" alt="" title="">
                         </div><div class="carousel-item">
                             <img src="assets/images/1-earth-800x480.jpg" alt="" title="">
@@ -763,7 +763,7 @@
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li><a href="index.html" class="text-warning">C·platform</a></li><li><a href="index.html" class="text-warning">NEWS</a></li><li><a href="index.html" class="text-warning">MISSION</a></li><li><a href="index.html" class="text-warning">ROADMAP</a></li><li><a href="index.html" class="text-warning">PARTNERS</a></li><li><a href="index.html">TEAM</a></li></ul>
+                <ul><li><a href="index.html" class="text-warning">C·platform</a></li><li><a href="index.html" class="text-warning">NEWS</a></li><li><a href="index.html" class="text-warning">MISSION</a></li><li><a href="index.html" class="text-warning">ROADMAP</a></li><li><a href="index.html" class="text-warning">PARTNERS</a></li><li><a href="index.html" class="text-warning">TEAM</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: support@cplatform.io<br>Phone: +82 10 5177 2299<br><br><br><strong>Partners</strong><br>06042<br>서울시 강남구 학동로19길 35,1층(논현동28-11)<br><br></p>
@@ -776,16 +776,22 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="wzqvlRKXheONvT9UX953nA3zs1z85GGe2hzQspcimgCH4+XbQciZfs0U/XovV50RynONfARdxVT6xtyY95jyi28c2sW3xD8S12CLJNYevf/jxV53sswo1LM0BQbQpBdq" data-form-email="true">
+                    <input type="hidden" value="L8tmtVAMfzOjr1xnHSLX2fKVz1Q95AXYtfn04c9zABUCLGccP2HBwEOueSQBaD7vT161Sf2uwOieq7CrGDqk2Vac8N2XCS9xrvbo4fdUml7jNepTL1QkHQxSYhjPSCAv" data-form-email="true">
 
-                    
+                    <div class="form-group">
+                        <label class="form-control-label" for="contacts3-t-name">Name<span class="form-asterisk">*</span></label>
+                        <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts3-t-name">
+                    </div>
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-email">Email<span class="form-asterisk">*</span></label>
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-t-email">
                     </div>
 
-                    
+                    <div class="form-group">
+                        <label class="form-control-label" for="contacts3-t-phone">Phone</label>
+                        <input type="tel" class="form-control input-sm input-inverse" name="phone" data-form-field="Phone" id="contacts3-t-phone">
+                    </div>
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-message">Message</label>
