create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://www.cplatform.io" data-toggle="dropdown-submenu" aria-expanded="true">C·Platform</a><div class="dropdown-menu"><a class="dropdown-item" href="#top">비전</a><a class="dropdown-item" href="index.html" aria-expanded="false">C 문화</a><a class="dropdown-item" href="#top" aria-expanded="false">걸어온 길</a><a class="dropdown-item" href="#top" aria-expanded="false">CI</a></div></li><li class="nav-item"><a class="nav-link link" href="https://www.cplatform.io">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">MISSION</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">ROADMAP</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PARTNERS</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="#top">백서 DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://www.cplatform.io" data-toggle="dropdown-submenu" aria-expanded="false">C·Platform</a><div class="dropdown-menu"><a class="dropdown-item" href="#top">비전</a><a class="dropdown-item" href="index.html" aria-expanded="false">C 문화</a><a class="dropdown-item" href="#top" aria-expanded="false">걸어온 길</a><a class="dropdown-item" href="#top" aria-expanded="false">CI</a></div></li><li class="nav-item"><a class="nav-link link" href="https://www.cplatform.io">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link" href="#top" aria-expanded="false">MISSION</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">ROADMAP</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">PARTNERS</a></li><li class="nav-item"><a class="nav-link link" href="#top" aria-expanded="false">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="#top">백서 DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/-A30E8_t4ic?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="0" style="padding-top: 240px; padding-bottom: 160px;">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-1c" data-bg-video="https://www.youtube.com/embed/-A30E8_t4ic?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" data-rv-view="0" style="padding-top: 240px; padding-bottom: 160px;">
 
     
     <div class="container">
@@ -741,7 +741,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="YFpuOTQiuOLZ/YAoDeScGqefl95C4QnZlrUZapc05gLlfGoMs0CCo5uKfcPOCPumHMbWfAL521gRO0c5zG6Vv6Xxmtxly1RJIUvQYDfuZAHyhJRf/0tXpZiPX7QRaqYK" data-form-email="true">
+                    <input type="hidden" value="o6zSPBVBbktf7RqulEzaVMU0be9UXSGsDiwsI1GisdXa0a07UlPzyhjF7dfCZDfxiw1L2CF9/I1yxZOIIzhzxLQYDggm6Tei5KTckIXas4ZyqcfK+LyEDD2hnOnsmvX3" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-t-name">Name<span class="form-asterisk">*</span></label>
