create github pages

--- a/ci.html
+++ b/ci.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2u" data-rv-view="603" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="image2-2u" data-rv-view="603" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -105,7 +105,7 @@
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <h4>Categories</h4>
-                <ul><li><a href="#top" class="text-warning">C·platform</a></li><li><a href="index.html" class="text-warning">NEWS</a></li><li><a href="index.html" class="text-warning">MISSION</a></li><li><a href="index.html" class="text-warning">ROADMAP</a></li><li><a href="index.html" class="text-warning">PARTNERS</a></li><li><a href="index.html#header3-13" class="text-warning">TEAM</a></li></ul>
+                <ul><li><a href="#top" class="text-warning">C·Platform</a></li><li><a href="index.html" class="text-warning">NEWS</a></li><li><a href="index.html" class="text-warning">MISSION</a></li><li><a href="index.html" class="text-warning">ROADMAP</a></li><li><a href="index.html" class="text-warning">PARTNERS</a></li><li><a href="index.html#header3-13" class="text-warning">TEAM</a></li></ul>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-6 col-lg-3">
                 <p><strong>Contacts</strong><br>Email: jaytogether@daum.net<br>Phone: +82 10 5177 2299<br><br><br><strong>Partners</strong><br>06042<br>서울시 강남구 학동로19길 35,1층(논현동28-11)<br><br></p>
@@ -118,7 +118,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="6ZbDdAMgXZC0kyjPpGa71cESCndLjLLJbpstrvuwgMcAgCU0l/zzDdn1/uboSmWuj7kHwums3W3H1h86xo12coxSXsgD4RTldaT7ApBuIVZGSD3fXheF1AM6+a5+JlyF" data-form-email="true">
+                    <input type="hidden" value="JyjWppjHBwYe0khfQfN2OTj8QZjxYga0OXrlaHNT+FnpHzA69ZCKqMmg4lKc3ewgmiOKTh8OlZGBWXN+ydaUtGUmtpCe8rpTpt7pbzvje9x0dHccvhgj+oURGCmTZDc1" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
