create github pages

--- a/ci.html
+++ b/ci.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="#top" class="navbar-logo"><img src="assets/images/cplatform-ci-516x90.png" alt="Mobirise"></a>
+                        <a href="#top" class="navbar-logo"><img src="assets/images/cplatform-1.svg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -129,7 +129,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="oJW1gitIFrzlGA4/U+aWfNTHykrXQeS77KH4T9bO2qDNUi8F1zSlPECMFmINTiNrkMtjHTh3CPZISV02zQK4pe7nWFNU5s7IzyBnIZM4CcLk7MU95rV8xA7pHoGc+XaN" data-form-email="true">
+                    <input type="hidden" value="UYJ2AoCxGN4ZJtpuBBqt5F+NETIYAJGGJU4H9an9yC/D2/a2SkSQOjXHtU0va1sk1EkE3lEHVFsOVSVbxf+Tx2tZJA7mRMm+y6GI7DXu7mpXRCXorT9jXmd68sD9s9eg" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
